ingwer/etc/iptables/rules.v4
# Generated by iptables-save v1.4.21 on Wed May  4 12:57:25 2016
*nat
:PREROUTING ACCEPT [9471:711108]
:INPUT ACCEPT [3714:291332]
:OUTPUT ACCEPT [1967:166848]
:POSTROUTING ACCEPT [2557:211426]
:ffrl-nat - [0:0]
-A POSTROUTING -s 10.37.0.0/16 -o ffrl+ -j ffrl-nat
-A POSTROUTING -s 10.56.0.0/16 -o ffrl+ -j ffrl-nat
-A ffrl-nat -o ffrl+ -j SNAT --to-source 185.66.195.38
COMMIT
# Completed on Wed May  4 12:57:25 2016
# Generated by iptables-save v1.4.21 on Wed May  4 12:57:25 2016
*filter
:INPUT ACCEPT [4207:388505]
:FORWARD ACCEPT [9324:748331]
:OUTPUT ACCEPT [1984:172098]
-A INPUT -d 164.132.135.215/32 -p gre -j ACCEPT
-A INPUT -m conntrack --ctstate INVALID -j DROP
-A INPUT -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -i mzBR -o wiBR -j ACCEPT
-A FORWARD -i wiBR -o mzBR -j ACCEPT
-A FORWARD -m conntrack --ctstate INVALID -j DROP
-A FORWARD -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -i wiBR -o ffrl+ -p tcp -m tcp --tcp-flags SYN,RST SYN -j TCPMSS --clamp-mss-to-pmtu
-A FORWARD -i mzBR -o ffrl+ -p tcp -m tcp --tcp-flags SYN,RST SYN -j TCPMSS --clamp-mss-to-pmtu
-A OUTPUT -s 164.132.135.215/32 -p gre -j ACCEPT
-A OUTPUT -m conntrack --ctstate INVALID -j DROP
-A OUTPUT -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
COMMIT
# Completed on Wed May  4 12:57:25 2016
