ingwer/etc/iptables/rules.v6
# Generated by ip6tables-save v1.4.21 on Wed May  4 12:57:25 2016
*nat
:PREROUTING ACCEPT [3352:316289]
:INPUT ACCEPT [2564:224420]
:OUTPUT ACCEPT [283:27971]
:POSTROUTING ACCEPT [325:31593]
COMMIT
# Completed on Wed May  4 12:57:25 2016
# Generated by ip6tables-save v1.4.21 on Wed May  4 12:57:25 2016
*mangle
:PREROUTING ACCEPT [1387325:639554952]
:INPUT ACCEPT [1334676:635718168]
:FORWARD ACCEPT [52:4905]
:OUTPUT ACCEPT [1804222:815942159]
:POSTROUTING ACCEPT [1804318:815950539]
COMMIT
# Completed on Wed May  4 12:57:25 2016
# Generated by ip6tables-save v1.4.21 on Wed May  4 12:57:25 2016
*filter
:INPUT ACCEPT [6090:485302]
:FORWARD ACCEPT [50:4287]
:OUTPUT ACCEPT [4158:307347]
-A INPUT -m conntrack --ctstate INVALID -j DROP
-A INPUT -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -i mzBR -o wiBR -j ACCEPT
-A FORWARD -i wiBR -o mzBR -j ACCEPT
-A FORWARD -m conntrack --ctstate INVALID -j DROP
-A FORWARD -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -i wiBR -o ffrl+ -p tcp -m tcp --tcp-flags SYN,RST SYN -j TCPMSS --clamp-mss-to-pmtu
-A FORWARD -i mzBR -o ffrl+ -p tcp -m tcp --tcp-flags SYN,RST SYN -j TCPMSS --clamp-mss-to-pmtu
-A FORWARD -i ffrl+ -o wiBR -p tcp -m tcp --tcp-flags SYN,RST SYN -j TCPMSS --clamp-mss-to-pmtu
-A FORWARD -i ffrl+ -o mzBR -p tcp -m tcp --tcp-flags SYN,RST SYN -j TCPMSS --clamp-mss-to-pmtu
-A OUTPUT -m conntrack --ctstate INVALID -j DROP
-A OUTPUT -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
COMMIT
# Completed on Wed May  4 12:57:25 2016
